# server/api-v1/api-doc.yml
@@ -60,7 +60,7 @@ responses:
 definitions:
   Username:
     type: string
-    pattern: '^(?=.{3,20}$)(?![_.])(?!.*[_.]{2})[a-zA-Z0-9._]+(?<![_.])$'
+    pattern: '^[a-zA-Z0-9]([._](?![._])|[a-zA-Z0-9]){1,18}[a-zA-Z0-9]$'
     description: The username of a user
   User:
     required:
@@ -101,7 +101,7 @@ definitions:
             type: integer
             minimum: 1
           author:
-            type: string
+            $ref: '#/definitions/Username'
   Posts:
     required:
       - rows
